# local_ai_toolkit

./: .gitignore  LICENSE  README.md  parse-with-glmocr.sh  run-with-monitor.sh  start-all.sh  start-hy-mt.sh  start_ocr_server.sh
app/backend/: .env.example  README.md  pyproject.toml
app/backend/app/: __init__.py  main.py
app/backend/app/api/: __init__.py  system.py  tasks.py  tools.py
app/backend/app/core/: settings.py
app/backend/app/schemas/: common.py  document.py  ocr.py  task.py  translate.py  webpage.py
app/backend/app/services/: __init__.py  document_pipeline.py  glmocr_service.py  ocr_service.py  task_manager.py  task_store.py  translate_service.py  webpage_service.py
app/frontend/: README.md  index.html  package-lock.json  package.json  styles.css
app/frontend/src/: main.js
app/scripts/: dev_backend.sh  dev_frontend.sh
